======== making a new DFHack release, even if the only changes made     ========
======== were in submodules with their own changelogs!                  ========
================================================================================

# Future

## New Tools

## New Features

## Fixes
- several fixes related to changes in file system handling in DF 52.01

## Misc Improvements
- `autoclothing`: added a ``clear`` option to unset previously set orders

## Documentation

## API
- ``Filesystem::getBaseDir`` and ``Filesystem::getInstallDir`` added (and made available in Lua)

## Lua
- inserting values into STL containers containing nonprimitive types is now supported

## Removed

# 52.02-r1

## New Tools

## New Features

## Fixes
- Honor the "portable mode" preference setting for locating save folders. Fixes DFHack cosaves not working in most cases.

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 52.01-r1

## New Tools

## New Features
- `tweak`: ``animaltrap-reuse``: make it so built animal traps automatically unload the vermin they catch into stockpiled animal traps, so that they can be automatically re-baited and reused

## Fixes

## Misc Improvements

## Documentation

## API

## Lua

## Removed

# 51.13-r1

## New Features

- Compatibility with DF 51.13

# 51.12-r1.1

## New Features

- Compatibility with Itch release of DF 51.12

# 51.12-r1

## Fixes
- `getplants`: will no longer crash when faced with plants with growths that do not drop seeds when processed
- `getplants`: use updated formula for calculating whether plant growths are ripe
- `getplants`: fix logic for determining whether plant growths have been picked
- `gui/teleport`: adapt to new behavior in DF 51.11 to avoid a crash when teleporting items into mid-air
- `script-manager`: fix lua scripts in mods not being reloaded properly upon entering a saved world on Windows